# kaka_base_project

kaka_base_camera_pkg/: CMakeLists.txt  CMakeLists.txt~  package.xml
kaka_base_face_detection_pkg/: CMakeLists.txt  package.xml
kaka_base_face_detection_pkg/scripts/: kaka_base_face_detection.py
kaka_base_face_detection_pkg/templates/: labels0.npy  labels1.npy  labels2.npy  labels3.npy  labels4.npy  labels5.npy  templates0.npy  templates1.npy  templates2.npy  templates3.npy  templates4.npy  templates5.npy
kaka_base_lidar/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
kaka_base_lidar/launch/: 3iroboticslidar2.launch~
kaka_base_lidar/src/: client.cpp  node.cpp  node4.cpp
kaka_base_mapping_pkg/: CMakeLists.txt  CMakeLists.txt~  package.xml
kaka_base_mapping_pkg/launch/: lidar.launch  mapping.launch  mapping.launch~
kaka_base_move_pkg/: CMakeLists.txt  package.xml
kaka_base_move_pkg/scripts/: kaka_base_move.py
kaka_base_navigation_pkg/: CMakeLists.txt  package.xml
kaka_base_navigation_pkg/config/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml  local_costmap_params.yaml~
kaka_base_navigation_pkg/launch/: amcl.launch  amcl.launch~  fake_robot.launch~  (+6 more)
kaka_base_serial_pkg/: CMakeLists.txt  CMakeLists.txt~  package.xml  setup.py
kaka_base_serial_pkg/scripts/: kaka_base_serial.py  kaka_base_serial.py~
kaka_base_serial_pkg/src/: kaka_base_serial.cpp  kaka_base_serial.h
(+46 files in other folders)
